--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.6",
+    "@prisma/client": "^4.10.1",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -22,5 +23,8 @@
     "react-feather": "^2.0.10",
     "swr": "^2.0.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "prisma": "^4.10.1"
   }
 }
