--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
     "swr": "^2.0.3",
