--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
     "swr": "^2.0.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.3",
     "prisma": "^4.10.1"
   }
 }
