--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "prettier": "2.8.4",
     "prisma": "^4.10.1"
   }
 }
